test/modules/diten/test_use_chain_resolution2.good
test_use_chain_resolution2.chpl:2: error: Symbol aaa multiply defined
